--- a/index.html
+++ b/index.html
@@ -1,41 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ToDO App</title>
-    <link rel="stylesheet" href="styles.css">
-    <script src="https://cdn.tailwindcss.com"> </script>
+    <title>TODO App</title>
+    <script src="https://cdn.tailwindcss.com">
+    </script>
 </head>
+
 <body>
-    <div>
-        <div>
-            <h1>TODO LIST</h1>
-        </div>
-        <div>
-            <form action="">
-                <button>Add Task</button>
-                <select name="" id="">
-                    <option>all</option>
-                    <option>all</option>
-                    <option>all</option>
-                    <option>all</option>
-                </select>
-            </form>
-        </div>
-        <div>
-            <form action="">
-                <span class="card">
-                    <input id="checkbox" type="checkbox">
-                    <label for="checkbox">Create a react project</label>
-                    <button><img src="https://cdn-icons-png.flaticon.com/512/860/860829.png" alt=""></button>
-                    <button><img src="https://static-00.iconduck.com/assets.00/edit-icon-2048x2048-6svwfwto.png" alt=""></button>
-                </span>
-            </form>
+    <div class="min-h-screen flex items-center justify-center bg-gradient-to-r from-blue-400 to bg-emerald-600">
+        <div class="bg-white shadow-lg rounded-3xl p-16 ">
+            <h1 class="text-gray-900 text-3xl font-bold text-center mb-6">TODO LIST</h1>
+            <div class="flex mb-4">
+                <input class="flex-grow px-3 py-2 border rounded-l-lg focus:outline-none focus:ring-2 focus:ring-blue-500" type="text" placeholder="input a task">
+                <button class="bg-blue-500 text-white px-4 py-2 rounded-r-lg">Add</button>
+            </div>
+            <ul class="space-y-2">
+
+            </ul>
         </div>
     </div>
-
-
-    <script src="defult.js.js"></script>
 </body>
-</html>
