--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 
     <meta charset="UTF-8">
     <title>TODO App</title>
+    <link rel="stylesheet" href="style.css">
     <script src="https://cdn.tailwindcss.com">
     </script>
 </head>
